Update index.htmlEnhance index.html with SEO meta tags and improved structure

--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Curated list of top AI design resources and tools.">
+    <meta name="keywords" content="AI, design, resources, tools, free">
     <title>AI Design Resources Hub</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>AI Design Resources Hub</h1>
+        <nav>
+            <a href="#tutorials">Tutorials</a>
+            <a href="#tools">Tools</a>
+            <a href="#forums">Forums</a>
+        </nav>
     </header>
     <main>
         <section id="resources">
-            <!-- Resources will be listed here -->
+            <h2>Top AI Design Resources</h2>
+            <!-- Resources will be dynamically loaded here -->
         </section>
     </main>
     <footer>
